<resources>

    //Application strings
    <string name="app_name">Hearthstone Cards</string>
    <string name="title_home">Hearthstone Cards</string>
    <string name="title_card_backs">Card backs</string>
    <string name="title_card_detail">Card detail</string>
    <string name="connection_problems_title">Something went wrong</string>
    <string name="connection_problems_description">Try check your internet connection and try refresh page.</string>

    //Database
    <string name="database_cards">cards_database</string>


    //Home Fragment
    <string name="filter_title">Filter cards by:</string>
    <string name="filter_type">Type</string>
    <string name="filter_set">Set</string>
    <string name="filter_class">Class</string>
    <string name="patch_text">patch: %s</string>
    <string name="list_title_all_cards">All Cards</string>
    <string name="list_title_filter">%s: %s</string>
    <string name="no_cards_title">No cards found</string>
    <string name="no_cards_description">For this %s unfortunately there are no cards. Try to use another filter.</string>

    //Card Detail Fragment
    <string name="card_detail_flavor_title">Lore:</string>
    <string name="card_detail_flavor_title_empty">This card has no lore information</string>
    <string name="show_gold_title">Show golden</string>
    <string name="card_detail_image_content_description">Full resolution image of selected card</string>

    //Card back fragment
    <string name="card_back_title">Cards backs found: %d</string>

    //Error messages
    <string name="error_no_connection">Server connection failed</string>
    <string name="error_no_card_backs">No card backs found</string>
    <string name="error_no_card">Card not found</string>

</resources>