<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.petrpol.hearthstonecards.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_cardDetailFragment"
            app:destination="@id/cardDetailFragment"
            app:enterAnim="@anim/fragment_close_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/fragment_open_enter"
            app:popExitAnim="@anim/fragment_open_exit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_card_backs"
        android:name="com.petrpol.hearthstonecards.ui.cardBacks.CardBacksFragment"
        android:label="@string/title_card_backs"
        tools:layout="@layout/fragment_card_backs" />
    <fragment
        android:id="@+id/cardDetailFragment"
        android:name="com.petrpol.hearthstonecards.ui.cardDetail.CardDetailFragment"
        android:label="@string/title_card_detail" >
        <argument
            android:name="CardId"
            app:argType="string" />
    </fragment>

</navigation>