<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="com.petrpol.hearthstonecards.data.enums.FilterType"/>
        <variable
            name="homeModelView"
            type="com.petrpol.hearthstonecards.ui.home.HomeViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintBottom_toTopOf="@+id/home_filter_constraint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.recyclerview.widget.RecyclerView>

        <ProgressBar
            android:id="@+id/home_card_recycler_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="@{homeModelView.isDataLoading}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/home_recycler_view" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/home_filter_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{homeModelView::showFilter}"
            android:src="@drawable/ic_baseline_filter_list_24"
            android:visibility="@{!homeModelView.filterViewShowed}"
            app:layout_constraintBottom_toTopOf="@id/main_snackbar"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/home_filter_fab_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="20dp"
            android:indeterminateTint="@color/colorTextDescription"
            android:visibility="@{homeModelView.isFilterLoading}"
            app:layout_constraintBottom_toBottomOf="@+id/home_filter_fab"
            app:layout_constraintEnd_toEndOf="@+id/home_filter_fab"
            app:layout_constraintStart_toStartOf="@+id/home_filter_fab"
            app:layout_constraintTop_toTopOf="@+id/home_filter_fab" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_filter_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/filter_view_background"
            android:elevation="20dp"
            android:maxHeight="@{homeModelView.filterType}"
            android:visibility="@{homeModelView.filterViewShowed}"
            app:layout_constraintBottom_toTopOf="@id/main_snackbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/home_filter_title"
                style="@style/ItemHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/filter_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/home_filter_close"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:onClick="@{homeModelView::hideFilter}"
                android:src="@drawable/ic_baseline_close_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/home_filter_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> homeModelView.setFilterType(FilterType.NONE)}"
                android:src="@drawable/abc_vector_test"
                android:visibility="@{homeModelView.filterType!=FilterType.NONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorTextDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_filter_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="@{homeModelView.filterType!=FilterType.NONE}"
                app:layout_constraintBottom_toTopOf="@+id/home_filter_patch_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_filter_title" />

            <LinearLayout
                android:id="@+id/home_filter_buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:visibility="@{homeModelView.filterType==FilterType.NONE}"
                app:layout_constraintBottom_toTopOf="@+id/home_filter_patch_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_filter_title">

                <LinearLayout
                    android:id="@+id/home_filter_button_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> homeModelView.setFilterType(FilterType.TYPE)}"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/home_filter_image_type"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:background="@drawable/filter_image_background"
                        android:src="@drawable/ic_launcher_foreground" />

                    <TextView
                        android:id="@+id/home_filter_text_type"
                        style="@style/ItemBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/filter_type" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/home_filter_button_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> homeModelView.setFilterType(FilterType.SET)}"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/home_filter_image_set"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:background="@drawable/filter_image_background"
                        android:src="@drawable/ic_launcher_foreground" />

                    <TextView
                        android:id="@+id/home_filter_text_set"
                        style="@style/ItemBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/filter_set" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/home_filter_button_class"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> homeModelView.setFilterType(FilterType.CLASS)}"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/home_filter_image_class"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:background="@drawable/filter_image_background"
                        android:src="@drawable/ic_launcher_foreground" />

                    <TextView
                        android:id="@+id/home_filter_text_class"
                        style="@style/ItemBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/filter_class" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/home_filter_patch_text"
                style="@style/ItemBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@{homeModelView.filterData.patch}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/main_snackbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:snackBar="@{homeModelView.errorMessage}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>